fix(mcp): bind only fields a type declares, and restore what the merge dropped